--- a/index.html
+++ b/index.html
@@ -1,54 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        body{
-            font-family: 'Times New Roman', Times, serif;
-        }
-        p{
-            text-indent: 5%;
-        }
-    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Design of the 1960s</title>
+    <title>FoxBox.html</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1 style="text-align: center;">The Design of the 1960s</h1>
-    <p>The <strong>nineteen-sixties</strong> were a vibrant time in the world of design in which increasing <i>internationalism</i> and <i>experimentation</i> flourished. This website pays tribute to some of the great designers and landmark design moments of that pivotal and unforgettable decade.</p>
-    <h2>Significant Designers</h2>
-    <ul>
-        <li>Paul Rand</li>
-        <li>Murial Cooper</li>
-        <li>Ikko Tanaka</li>
-        <li>The</li>
-        <ul>
-            <li>Ray Eames</li>
-            <li>Charles Eames</li>
-        </ul>
-        <li>Saul Bass</li>
-        <li>Margaret Calvert</li>
-        <li>Yusaku Kamekura</li>
-        <li>Herb Lubalin</li>
-        <li>Shigeo Fukuda</li>
-        <li>Milton Glaser</li>
-        <li>Massimo Vignelli</li>
-    </ul>
-    <h2>Top Typefaces of 1960s Style</h2>
-    <ol style="list-style:lower-alpha">
-        <li>Avant Garde</li>
-        <li>Cooper Black</li>
-        <li>Futura</li>
-        <li>Helvetica</li>
-        <li>Univers</li>
-        <li>Eurostile</li>
-        <li>Impact</li>
-        <li>Sabon</li>
-        <li>Bauhaus</li>
-        <li>Baby Teeth</li>
-    </ol>
-    <footer>
-        <p>Website By Brayden Bauer</p>
-    </footer>
+    
 </body>
 </html>
