--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoxBox.html</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <h1>FoxBox.html</h1>
+    <div>
+        <menu>
+            <li>HOME</li>
+            <li>GAMES</li>
+            <li>ABOUT</li>
+            <li>CONTACT</li>
+            <li>FAQ</li>
+        </menu>
+    </div>   
 </body>
 </html>
