Test to fix style

--- a/FoxBox/index.html
+++ b/FoxBox/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FoxBox.html</title>
-    <link href="style.css" rel="stylesheet">
+    <title>FoxBox</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>FoxBox.html</h1>
+    <h1>FoxBox</h1>
     <div>
-        <menu>
+        <ul>
             <li>HOME</li>
             <li>GAMES</li>
+            <li>NEWS</li>
             <li>ABOUT</li>
             <li>CONTACT</li>
             <li>FAQ</li>
-        </menu>
+        </ul>
     </div>   
 </body>
 </html>
