--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoxBox</title>
-    <link href="FoxBoxNova/FoxBoxNova.github.io/FoxBox/fxbxstyle.css">
+    <link href="fxbxstyle.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <h1>FoxBox</h1>
