--- a/games.html
+++ b/games.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FoxBox</title>
+    <title>Games</title>
     <link href="fxbxstyle.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <section>
-    <h3>FoxBox</h3>
+    <h3>GAMES</h3>
         <ul style="list-style: none;">
             <button><a href="index.html"><li class="navbutton">HOME</li></a></button>
             <button><a href="games.html"><li class="navbutton">GAMES</li></a></button>
@@ -17,6 +17,13 @@
             <button><a href="contact.html"><li class="navbutton">CONTACT</li></a></button>
             <button><a href="change.html"><li class="navbutton">CHANGE LOG</li></a></button>
         </ul>
+    </section>
+    <section>
+        <h3 class="sub">Welcome To The Hall of Games!</h3>
+        <div>
+            <h3 class="sub"><a href="unfairclicker.html">Unfair Clicker</a></h3>
+            <p>Description: Unfair Clicker was one of many annual projects that I make for <i><a href="about.html">April Fool's Bools</a></i>. This game is designed to give you anxiety, stress, hurt feelings, a reason to rethink your life revolving around rng, and a good way to practice writing "I will not destroy property after losing a video game". If you like to pretend that you are actually making progress at a casino, then this is the game for you!</p>
+        </div>
     </section>
 </body>
 </html>
