--- a/news.html
+++ b/news.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FoxBox</title>
+    <title>NEWS</title>
     <link href="fxbxstyle.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <section>
-    <h3>FoxBox</h3>
+    <h3>NEWS!</h3>
         <ul style="list-style: none;">
             <button><a href="index.html"><li class="navbutton">HOME</li></a></button>
             <button><a href="games.html"><li class="navbutton">GAMES</li></a></button>
