--- a/about.html
+++ b/about.html
@@ -18,5 +18,13 @@
             <button><a href="change.html"><li class="navbutton">CHANGE LOG</li></a></button>
         </ul>
     </section>
+    <section>
+        <h3 class="sub">The FoxBox Team</h3>
+        <h2 class="sub">Where it all began</h2>
+        <p class="sub">October 29 2019</p>
+        <p style="letter-spacing: 0.4px;">Brayden (Nova) Bauer began to be more involved with technology to where they litterally self tought themselfs to make a game overnight. The game was called Sammy Plaster, it was a mascot horror game that revolved around a Bendy and the Ink Machine theme with a cartoon brought to life. However, the game itself was put to close as they thought that if they wanted to make something, they wanted it to stand out. Over the year, they organized a group of individuals who would be part of -MODS- STUDIOS.</p>
+        <p class="sub">Spring 2023</p>
+        <p style="letter-spacing: 0.4px;">As time passed on and Brayden was wrapping up their Sinor year of High School, they began to build a popularity in the Fortnite community with their gameplay and helping players make improved references of their cosmetic suggestions for free. Not long after, they submitted their own of his OC Faith.</p>
+    </section>
 </body>
 </html>
